modules/alb/security.tf
resource "aws_security_group" "ecs_lb" {
  name   = var.name
  vpc_id = var.vpc_id

  ingress {
    from_port         = 0
    to_port           = 0
    protocol          = "icmp"
    cidr_blocks       = [var.internal ? var.vpc_cidr : "0.0.0.0/0"]
  }

  ingress {
    from_port         = 80
    to_port           = 80
    protocol          = "tcp"
    cidr_blocks       = [var.internal ? var.vpc_cidr : "0.0.0.0/0"]
  }

  ingress {
    from_port         = 443
    to_port           = 443
    protocol          = "tcp"
    cidr_blocks       = [var.internal ? var.vpc_cidr : "0.0.0.0/0"]
  }

  egress {
    from_port         = 0
    to_port           = 0
    protocol          = "-1"
    cidr_blocks       = [var.vpc_cidr]
  }
}
